--- a/templates/home.html
+++ b/templates/home.html
@@ -3,51 +3,29 @@
 <html>
   <head>
     <title>Title of Tab </title>
-    <style>
-      h1 {
-        font-size: 45px;
-        font-family: rosybrown;
-        font-weight: normal;
-        color: rgb(123,234,100);
-        text-align: center;
-      }
-      #banner {
-        width: 100%;
-        height: 300px;
-        object-fit: cover;
-      }
-      h2 {
-        font-size: 30px;
-        font-family: ethiopic-halehame-aa-er;
-        font-weight: normal;
-        color: rgb(80,80,80);
-        text-align: center;
-      }
-      p {
-        font-size: 45px;
-        font-family: rosybrown;
-        font-weight: normal;
-        color: rgb(23,34,200);
-        text-align: center;
-      }
-      #container {
-        max-width: 720px;
-        margin: 0 auto;
-      }
-      
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
-    <div id="container">
-    <h1>Jobs</h1>
-    <img id ='banner' src="https://website.athulboben.repl.co/static/the%20boys.jpg" >
+    <div class="container">
+    <h1 class="text-center mb-4">{{comp_name}} Jobs</h1>
+    <img class="img" id ='banner' src="https://website.athulboben.repl.co/static/the%20boys.jpg" >
     <h2>About me </h2>
-    <p>
+    <p class="lead">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    <h2>Open Positions</h2>
-      <div style='text-align:center;'>
-    <button>Contact Us</button>
+    </p
+    <h2 class="text-center mt-2">Open Positions</h2>
+      <div>
+        <p>
+          {% for i in job%}
+            {% include 'job_item.html' %}
+          {% endfor %}
+      </p>
+      </div>
+      <div class='text-center'>
+        <button class="btn btn-primary btn-lg">Contact US</button>
+      </div>
     </div>
   </body>
 </html>
